Loader symbol and header horizontal scroll fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,11 +123,6 @@
   }
 }
 
-html, body {
-  overflow: auto;
-  overflow-x: hidden;
-}
-
 
 
 /* .grid-background{
